[tool.poetry]
name = "sqlcli"
version = "0.1.0"
description = "A command line interface (CLI) for interacting with SQLModel."
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
rich = "^11.0.0"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[tool.poetry.scripts]
sqlcli = "sqlcli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
